--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "my_portfolio",
   "version": "0.1.0",
-  "homepage": "https://Hemanth-1510.github.io/my_portfolio",
+  "homepage": "https://Hemanth-1510.github.io/portfolio",
   "private": true,
   "dependencies": {
     "@emailjs/browser": "^3.11.0",
